mise à jour du projet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-   
+    <div class="row">
+        <div class="col-6">
+            <button class="btn btn-primary">Bouton Principal</button>
+            <button class="btn btn-outline">Bouton Outline</button>
+        </div>
+        <div class="col-6">
+            <div class="card card-primary">
+                <h2>Carte Principale</h2>
+                <p>Contenu de la carte</p>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Ajoutez d'autres éléments pour tester d'autres composants -->
+    
+    <script>
+        // Code JavaScript si nécessaire
+    </script>
 </body>
 </html>
